--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="container">
 			<div class="card-white">
 				<h1>Hello, I’m Dorian 😁</h1>
-				<img src="images/profile.jpg" alt="Dorian Geaufreau">
+				<img src="images/profile-picture.png" alt="Dorian Geaufreau">
 				<p>
 					I love finance, history, travel ✈️ and football ⚽️. I studied in Audencia Business School for 3 years to learn lot of things about Finance.
 				</p>
